tests/good/test040.tig
let
  type a = array of int
  var x := a[3] of 42
  var i := 3
in
  print_int(x[i-1])
end

